# IkiDataGenerator

./: .gitignore  ARTICLE.md  README.md  main.py  pyproject.toml  requirements.txt  run_all_examples.py  structure.py
.github/workflows/: publish.yml
examples/: 00_quick_start.py  01_basic_fields.py  02_export_formats.py  100_programming_data.py  10_personal_data.py  110_ml_models.py  111_ml_metrics.py  11_contact_info.py  12_identity_documents.py  200_templates.py  201_regex_patterns.py  203_blank_percentages.py  20_ecommerce_shop.py  21_shopping_cart.py  22_inventory_management.py  23_payment_processing.py  300_saas_users.py  301_social_network.py  302_analytics_events.py  303_ecommerce_platform.py  304_travel_booking_system.py  308_hospital_system.py  309_school_system.py  30_bank_accounts.py  31_credit_cards.py  32_transactions.py  33_investment_portfolio.py  34_crypto_blockchain.py  400_mixed_categories.py  401_batch_processing.py  403_large_dataset.py  40_patient_records.py  41_medical_diagnosis.py  42_medications.py  500_test_data_unit_tests.py  501_load_testing_data.py  502_demo_data.py  504_api_response_mocking.py  50_addresses.py  51_international_locations.py  (+6 more)
src/iki_data_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ikidatagen/: __init__.py  base_generator.py  core.py  dataset_manager.py  payload.py  provider_factory.py  schema_registry.py
src/ikidatagen/external_datasets/csv/: hotels.csv
src/ikidatagen/external_datasets/json/: finance.json
src/ikidatagen/providers/: base_provider.py
src/ikidatagen/providers/advanced/: character_sequence.py  digit_sequence.py  json_array.py  lambda.py  naughty_string.py  regular_expression.py  template.py  url.py
src/ikidatagen/providers/ai/: compute_precision.py  concept_drift_status.py  cpu_utilization.py  data_drift_score.py  gpu_utilization.py  inference_endpoint.py  inference_result.py  memory_footprint.py  model_confidence.py  model_deployment_env.py  model_explainability_method.py  model_framework.py  model_input_format.py  model_latency.py  model_lifecycle_stage.py  model_output_format.py  model_owner.py  model_task.py  model_training_dataset.py  model_type.py  model_version.py  retraining_frequency.py
src/ikidatagen/providers/basic/: address_line_2.py  binomial_distribution.py  blank.py  boolean.py  color.py  current_timestamp.py  custom_list.py  datetime.py  day_of_week.py  dice_roll.py  dimension.py  duration.py  emoji.py  encrypt.py  exponential_distribution.py  frequency.py  geometric_distribution.py  height.py  hex_color.py  imperial_unit.py  isbn.py  metric_prefix.py  mongodb_object_id.py  month.py  nato_phonetic.py  normal_distribution.py  number.py  paper_size.py  paragraphs.py  password.py  password_hash.py  poisson_distribution.py  priority_level.py  punctuation.py  rating.py  row_number.py  season.py  sentences.py  sentiment.py  sequence.py  (+7 more)
src/ikidatagen/providers/car/: car_base_model.py  car_make.py  car_model.py  car_model_year.py  car_vin.py  driver_license_number.py  engine_type.py  fuel_type.py  gas_type.py  license_plate.py  transmission_type.py  vehicle_type.py
src/ikidatagen/providers/commerce/: barcode_ean13.py  barcode_upc.py  bban.py  (+59 more)
(+576 files in other folders)
